# Facial_Recognition

./: .deepface.lnk  .insightface.lnk  Create_Embeddings.py  Embedded_Recognition.py  Face_Counter.py  README.md  Verify_img.py  face_recognition.py  latest_face_recognition.py  launcher.py  main.py  modern_face_recognition.py  project_flowchart.md  pyproject.toml  setup_face_recognition.py  ultra_modern_face_recognition.py
data/known_faces/: face_database_info.json  modern_face_database.pkl
embeddings/: Swapnil_embeddings.json
src/face_recognition_system/: __init__.py  advanced_alert_system.py  advanced_face_detector.py  advanced_face_recognizer.py  alert_system.py  camera_handler.py  config.py  config_old.py  enhanced_main_system.py  face_detector.py  face_recognizer.py  main_system.py
