[project]
name = "facial-recognition"
version = "1.0.0"
description = "State-of-the-art facial recognition system with live detection, CCTV support, and intelligent alert notifications"
readme = "README.md"
requires-python = ">=3.13.5"
authors = [
    {name = "Facial Recognition Team", email = "team@facialrecognition.ai"}
]
keywords = ["face-recognition", "computer-vision", "ai", "real-time", "cctv", "security"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Multimedia :: Video :: Capture",
    "Topic :: System :: Monitoring",
]

dependencies = [
    # Core computer vision and AI - Latest versions compatible with Python 3.13
    "opencv-python>=4.11.0",
    "opencv-contrib-python>=4.11.0",
    # Advanced inference engine (SOTA 2025)
    "onnxruntime>=1.20.0", # Latest ONNX for model inference
    # Scientific computing
    "numpy>=2.1.0", # NumPy 2.x for Python 3.13 compatibility
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    # Image processing
    "Pillow>=8.0.0",
    # ONNX runtime for model inference
    "onnxruntime>=1.15.0",
    # Notifications and UI
    "plyer>=2.1.0",
    "pygame>=2.5.0",
    # CLI and configuration
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.5.0",
    "click>=8.1.0",
    # Network and utilities
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "colorama>=0.4.6",
    "tqdm>=4.66.0",
    "psutil>=5.9.0",
    # Modern computer vision
    "ultralytics>=8.3.0", # YOLO v11 (latest 2025)
    "timm>=0.9.0", # PyTorch Image Models (latest architectures)
    "huggingface-hub>=0.20.0", # Access to latest face models
    "dlib>=20.0.0",
    "face-recognition>=1.3.0",
    "imutils>=0.5.4",
]

[project.optional-dependencies]
advanced = [
    "ultralytics>=8.3.0",  # YOLO v8/v11 (when Python 3.13 support available)
    "insightface>=0.7.3",  # State-of-the-art face recognition
    "opencv-contrib-python>=4.10.0",
    "albumentations>=1.4.0",
    "imageio>=2.30.0",
    "pandas>=2.0.0",
]

notifications = [
    "win10toast>=0.9",  # Windows native notifications
    "pystray>=0.19.0",  # System tray integration
    "websockets>=12.0",
    "asyncio-mqtt>=0.16.0",
    "pydantic-settings>=2.0.0",
]

pytorch = [
    # PyTorch packages - will be available when Python 3.13 support is added
    # "torch>=2.2.0,<2.3.0",
    # "torchvision>=0.17.0,<0.18.0",
    # "facenet-pytorch>=2.6.0",
]

dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.0.0",
]

gpu = [
    # GPU packages - will be available when Python 3.13 support is added
    # "torch[cu121]>=2.2.0,<2.3.0",
    # "torchvision[cu121]>=0.17.0,<0.18.0",
    "onnxruntime-gpu>=1.15.0",
]

all = [
    "facial-recognition[advanced,notifications,dev]"
]

[project.scripts]
face-recognition = "face_recognition_system.main_system:main"
facial-rec = "face_recognition_system.main_system:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/face_recognition_system"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/data",
    "/logs",
    "/README.md",
    "/pyproject.toml",
]

[tool.black]
target-version = ['py313']
line-length = 88
skip-string-normalization = true

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.uv.sources]
face-recognition-models = { git = "https://github.com/ageitgey/face_recognition_models" }
